// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User Component tests > Account Page 1`] = `
<div>
  <div
    class="_user_e9c5ca"
  >
    <div
      class="_leftColumn_e9c5ca"
    >
      <div
        class="_panel_e9c5ca"
      >
        <ul>
          <li>
            <a
              aria-current="page"
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296 _active_f8f296"
              href="/my-account"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.account
              </span>
            </a>
          </li>
          <li>
            <a
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              href="/payments"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.payments
              </span>
            </a>
          </li>
          <li
            class="_logoutLi_e9c5ca"
          >
            <button
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.logout
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="_mainColumn_e9c5ca"
    >
      <div
        class="_panel_e9c5ca"
      >
        <div
          class="_panelHeader_e9c5ca"
        >
          <h3>
            account.about_you
          </h3>
        </div>
        <div
          class="_flexBox_1c1c63"
        >
          <div
            class="_textField_e16c1b"
          >
            <label
              class="_label_e16c1b"
              for="text-field_1235_firstName"
            >
              account.firstname
            </label>
            <p>
              User
            </p>
          </div>
          <div
            class="_textField_e16c1b"
          >
            <label
              class="_label_e16c1b"
              for="text-field_1235_lastName"
            >
              account.lastname
            </label>
            <p>
              Person
            </p>
          </div>
        </div>
        <div
          class="_controls_1c1c63"
        >
          <button
            class="_button_f8f296 _default_f8f296 _outlined_f8f296"
            type="button"
          >
            <span>
              account.edit_information
            </span>
          </button>
        </div>
      </div>
      <div
        class="_panel_e9c5ca"
      >
        <div
          class="_panelHeader_e9c5ca"
        >
          <h3>
            account.email
          </h3>
        </div>
        <div
          class="_flexBox_1c1c63"
        >
          <div
            class="_textField_e16c1b"
          >
            <label
              class="_label_e16c1b"
              for="text-field_1235_email"
            >
              account.email
            </label>
            <p>
              user@jwplayer.com
            </p>
          </div>
        </div>
        <div
          class="_controls_1c1c63"
        />
      </div>
      <div
        class="_panel_e9c5ca"
      >
        <div
          class="_panelHeader_e9c5ca"
        >
          <h3>
            account.security
          </h3>
        </div>
        <div
          class="_flexBox_1c1c63"
        />
        <div
          class="_controls_1c1c63"
        >
          <button
            class="_button_f8f296 _default_f8f296 _outlined_f8f296"
            type="button"
          >
            <span>
              account.edit_password
            </span>
          </button>
        </div>
      </div>
      <div
        class="_panel_e9c5ca"
      >
        <div
          class="_panelHeader_e9c5ca"
        >
          <h3>
            account.terms_and_tracking
          </h3>
        </div>
        <div
          class="_flexBox_1c1c63"
        />
        <div
          class="_controls_1c1c63"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`User Component tests > Favorites Page 1`] = `
<div>
  <div
    class="_user_e9c5ca"
  >
    <div
      class="_leftColumn_e9c5ca"
    >
      <div
        class="_panel_e9c5ca"
      >
        <ul>
          <li>
            <a
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              href="/my-account"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.account
              </span>
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296 _active_f8f296"
              href="/favorites"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.favorites
              </span>
            </a>
          </li>
          <li>
            <a
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              href="/payments"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.payments
              </span>
            </a>
          </li>
          <li
            class="_logoutLi_e9c5ca"
          >
            <button
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.logout
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="_mainColumn_e9c5ca"
    >
      <div>
        <div
          class="_header_546956"
        >
          <h3>
            favorites.title
          </h3>
          <button
            class="_button_f8f296 _default_f8f296 _outlined_f8f296"
          >
            <span>
              favorites.clear
            </span>
          </button>
        </div>
        <div>
          <div
            class="_container_7175d1 _cols-3_7175d1"
            role="grid"
          >
            <div
              class="_cell_7175d1"
              role="row"
            >
              <div
                role="cell"
              >
                <a
                  aria-label="Fav 1"
                  class="_card_d75732"
                  href="/m/aaabbbcc/fav-1?r=abcdffff"
                  tabindex="0"
                >
                  <div
                    class="_poster_d75732 _aspect169_d75732"
                  >
                    <div
                      class="_meta_d75732"
                    >
                      <div
                        class="_tags_d75732"
                      >
                        <div
                          class="_tag_d75732"
                        >
                          1 min
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_titleContainer_d75732"
                  >
                    <div
                      class="_title_d75732"
                    >
                      Fav 1
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="_cell_7175d1"
              role="row"
            >
              <div
                role="cell"
              >
                <a
                  aria-label="Big Buck Bunny"
                  class="_card_d75732"
                  href="/m/aaabbbcd/big-buck-bunny?r=bbbdddff"
                  tabindex="0"
                >
                  <div
                    class="_poster_d75732 _aspect169_d75732"
                  >
                    <div
                      class="_meta_d75732"
                    >
                      <div
                        class="_tags_d75732"
                      >
                        <div
                          class="_tag_d75732"
                        >
                          100 min
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_titleContainer_d75732"
                  >
                    <div
                      class="_title_d75732"
                    >
                      Big Buck Bunny
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="_cell_7175d1"
              role="row"
            >
              <div
                role="cell"
              >
                <a
                  aria-label="My last favorite"
                  class="_card_d75732"
                  href="/m/ggaaccvv/my-last-favorite?r=bbbbbbbb"
                  tabindex="0"
                >
                  <div
                    class="_poster_d75732 _aspect169_d75732"
                  >
                    <div
                      class="_meta_d75732"
                    >
                      <div
                        class="_tags_d75732"
                      >
                        <div
                          class="_tag_d75732"
                        >
                          11 min
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="_titleContainer_d75732"
                  >
                    <div
                      class="_title_d75732"
                    >
                      My last favorite
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`User Component tests > Payments Page 1`] = `
<div>
  <div
    class="_user_e9c5ca"
  >
    <div
      class="_leftColumn_e9c5ca"
    >
      <div
        class="_panel_e9c5ca"
      >
        <ul>
          <li>
            <a
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              href="/my-account"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.account
              </span>
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296 _active_f8f296"
              href="/payments"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.payments
              </span>
            </a>
          </li>
          <li
            class="_logoutLi_e9c5ca"
          >
            <button
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_1e9999"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z"
                    />
                  </g>
                </svg>
              </div>
              <span>
                nav.logout
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="_mainColumn_e9c5ca"
    >
      <div
        class="_panel_e9c5ca"
      >
        <div
          class="_panelHeader_e9c5ca"
        >
          <h3>
            user:payment.subscription_details
          </h3>
        </div>
        <div
          class="_infoBox_c57ff5"
        >
          <p>
            <strong>
              user:payment.annual_subscription
            </strong>
             
            <br />
            user:payment.next_billing_date_on
          </p>
          <p
            class="_price_c57ff5"
          >
            <strong>
              $199.99
            </strong>
            <small>
              /
              account:periods.year
            </small>
          </p>
        </div>
        <button
          aria-disabled="false"
          class="_button_f8f296 _upgradeSubscription_c57ff5 _primary_f8f296 _outlined_f8f296"
          data-testid="change-subscription-button"
        >
          <span>
            user:payment.change_subscription
          </span>
        </button>
      </div>
      <div
        class="_panel_e9c5ca"
      >
        <div
          class="_panelHeader_e9c5ca"
        >
          <h3>
            user:payment.payment_method
          </h3>
        </div>
        <div>
          <div
            class="_textField_e16c1b"
          >
            <label
              class="_label_e16c1b"
              for="text-field_1235"
            >
              user:payment.card_number
            </label>
            <p>
              •••• •••• •••• 9888
            </p>
          </div>
          <div
            class="_cardDetails_c57ff5"
          >
            <div
              class="_textField_e16c1b"
            >
              <label
                class="_label_e16c1b"
                for="text-field_1235"
              >
                user:payment.expiry_date
              </label>
              <p>
                03/30
              </p>
            </div>
            <div
              class="_textField_e16c1b"
            >
              <label
                class="_label_e16c1b"
                for="text-field_1235"
              >
                user:payment.security_code
              </label>
              <p>
                ******
              </p>
            </div>
          </div>
          <button
            class="_button_f8f296 _default_f8f296 _outlined_f8f296"
          >
            <span>
              account:payment.edit_card
            </span>
          </button>
        </div>
      </div>
      <div
        class="_panel_e9c5ca"
      >
        <div
          class="_panelHeader_e9c5ca"
        >
          <h3>
            user:payment.billing_history
          </h3>
        </div>
        <div
          class="_infoBox_c57ff5"
        >
          <p
            class="_transactionItem_c57ff5"
          >
            <strong>
              July 16, 2022
            </strong>
            <span>
              Your Cool Subscription
            </span>
            <span>
              11232
            </span>
          </p>
          <div
            class="_transactionDetails_c57ff5"
          >
            <div
              class="_transationPrice_c57ff5"
            >
              user:payment.price_paid_with
            </div>
          </div>
        </div>
        <div
          class="_infoBox_c57ff5"
        >
          <p
            class="_transactionItem_c57ff5"
          >
            <strong>
              November 9, 2022
            </strong>
            <span>
              Your Cool Subscription
            </span>
            <span>
              11234
            </span>
          </p>
          <div
            class="_transactionDetails_c57ff5"
          >
            <div
              class="_transationPrice_c57ff5"
            >
              user:payment.price_paid_with
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
